# Cassandra

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  README  README.md  ThingsToFix.txt  azure-pipelines.yml  license.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bugs.md  documentation_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
Butane/cubic_onlytranslate/: butane.chk  butane.init_config.box1  butane.inp  butane.instnt_prp1.box1  butane_H.box1  butane_box1.xyz
Documentation/: MCF_Tutorial.pdf.REMOVED.git-id  upload_instructions.txt  user_guide.pdf.REMOVED.git-id
Documentation/Tex/: .gitignore  EulerAngles.eps  GUI_screenshot.eps  GUI_screenshot.eps.REMOVED.git-id  acceptance_criteria.tex  algorithms.tex  body_ff.eps  c3.eps  c3.eps.REMOVED.git-id  development_log.tex  do_it.sh  features.tex  forcefield.tex  howto.tex  input_files.tex  introduction.tex  pdbfile_edited_final.eps  pdbfile_final.eps  pentane_cml.eps  pentane_cml_modified.eps  preface.tex  reference.bib  setup_flowdiagram.eps  simulationsetup_betarelease.eps  solids.tex  title.tex  top_ff.eps  user_guide.out  user_guide.tex  user_guide.toc  utilities.tex  widom_insertions.tex
Documentation/source/: Makefile  conf.py  index.rst  index.rst.bak  welcome.rst
Examples/: BK3.mcf  Cl_BK3.mcf  H2O_NaCl_GEMC.inp  H2O_NaCl_NPT.inp  Na_BK3.mcf  polarizable.tex  run_examples.py
Examples/Potential_Map/: cell_matrix.xlsx  gemc_methane.inp  gemc_methane.out.box1.H  methane_noncubic.inp  ~$cell_matrix.xlsx
Issues/zig0/: Si_meOH.inp  TraPPE_UA_meOH.mcf  box1.xyz  pore10r.chk  pore10r.instnt_prp1.box1  pore10r.out  pore10r_H.box1  pore10r_box1.xyz  pore10r_box1.xyz.REMOVED.git-id  tEthyMeOH.sh  zig0.tar
Issues/zig1/: Si.mcf  Si_meOH.inp  pore10r.chk  pore10r.instnt_prp1.box1  pore10r.out  pore10r_H.box1  pore10r_box1.xyz  pore10r_box1.xyz.REMOVED.git-id  zig1.tar.REMOVED.git-id
Libraries/Src/libgmxfort/: CMakeLists.txt  README.md
Libraries/Src/libgmxfort/cmake/: buildtype.cmake  info.cmake  libgmxfort.pc.cmake.in  public.cmake  version.cmake  xdrfile.cmake
Libraries/Src/libgmxfort/cmake/pkg/: gmxfort-config.cmake.in
Libraries/Src/libgmxfort/example/: Makefile  README  main.f90
Libraries/Src/libgmxfort/src/: CMakeLists.txt  common.f90  indexfile.f90  trajectory.f90  utils.f90
Libraries/Src/libgmxfort/src/tests/: CMakeLists.txt  gmxfort_tests.f90  ndxfile.f90  ndxfile_grp.f90  read_next.f90  test.ndx  utils.f90  xtcfile.f90
Libraries/Src/libxdrfile/: CMakeLists.txt  README.md  libxdrfile.pc.cmake.in
Libraries/Src/libxdrfile/cmake/pkg/: xdrfile-config.cmake.in
Libraries/Src/libxdrfile/include/: xdrfile.h  xdrfile_trr.h  xdrfile_xtc.h
Libraries/Src/libxdrfile/src/: trr_seek.c  xdrfile.c  xdrfile_trr.c
Libraries/Src/libxdrfile/src/tests/: test.c  test.trr  test.xdr  test.xtc
MCF/: cyclohexane_UA_Trappe.mcf  diethyl_UA_TraPPE.mcf  dimethylhexane_UA_Trappe.mcf  isobutane_UA_Trappe.mcf  methane_UA_TraPPE.mcf  spce.mcf  tip4p.mcf  tip5p.mcf
Methane/butane_CELLMATRIX/: c4.mcf  cell.inp  cell.instnt_prp1.box1  cell.out  cube.chk  cube.inp  cube.instnt_prp1.box1.REMOVED.git-id  cube_H.box1  cube_box1.xyz
Methane/butane_CELLMATRIX_CUBIC/: cell.chk  cell.inp  cell.inp.out  cell.instnt_prp1.box1  cell.instnt_prp1.box1.REMOVED.git-id  cell.log.REMOVED.git-id  cell_box1.xyz  cell_prod.chk  cell_prod.instnt_prp1.box1  cell_prod.instnt_prp1.box1.REMOVED.git-id  cell_prod.log.REMOVED.git-id  cell_prod_box1.xyz.REMOVED.git-id  cell_prod_box1_vmd.xyz.REMOVED.git-id  cube.chk  cube.inp  cube.inp.out  cube.instnt_prp1.box1  cube.instnt_prp1.box1.REMOVED.git-id  cube.log.REMOVED.git-id  cube_box1.xyz  cube_prod.chk  cube_prod.instnt_prp1.box1  cube_prod.instnt_prp1.box1.REMOVED.git-id  cube_prod.log.REMOVED.git-id  cube_prod_H.box1  cube_prod_box1.xyz.REMOVED.git-id  cube_prod_box1_vmd.xyz.REMOVED.git-id  getgr.py  gr.out
Methane/butane_CELLMATRIX_CUBIC_INITIALCONFIG/: butane.chk  butane.init_config.box1  c4.inp
Methane/butane_CELLMATRIX_INITIALCONFIG/: butane.chk  butane.init_config.box1  butane.instnt_prp1.box1  butane_H.box1  butane_box1.xyz  c4.inp
Methane/butane_CELLMATRIX_reg1.0/: butane.chk  butane.instnt_prp1.box1  butane_H.box1  butane_box1.xyz  c4.inp  c4.inp.out  c4.o92166  see.out
Methane/butane_CELLMATRIX_rot1.0/: butane.chk  butane.init_config.box1  butane.instnt_prp1.box1  butane_box1.xyz  c4.inp
Methane/butane_CELLMATRIX_trans1.0/: butane.chk  butane.instnt_prp1.box1  c4.inp
Methane/butane_CUBIC/: butane.chk  butane.instnt_prp1.box1  butane.log.REMOVED.git-id  butane_box1.xyz  c4.inp
Methane/butane_CUBIC_INITIALCONFIG/: butane.chk  butane.instnt_prp1.box1  butane_box1.xyz  c4.inp
Methane/butane_CUBIC_reg1.0/: butane.chk  butane_box1.xyz  c4.inp  c4.inp.out  scriptfile.submit1  see.out
Methane/butane_CUBIC_rot1.0/: butane.chk  c4.inp
Methane/butane_CUBIC_trans1.0/: butane.chk  butane_H.box1  butane_box1.xyz  c4.inp
Methane/cubic/: methane.chk
Scripts/: plot.py
Src/: Makefile  Makefile.conda  Makefile.gfortran  Makefile.gfortran.noXTC  Makefile.gfortran.openMP  Makefile.gfortran.openMP.noXTC  Makefile.gfortran.openMP.xtc  Makefile.gfortran.xtc  Makefile.intel.openMP  Makefile.intel.openMP.noXTC  Makefile.intel.openMP.xtc  Makefile.noXTC  Makefile.pgfortran  Makefile.pgfortran.noXTC  Makefile.pgfortran.openMP  Makefile.pgfortran.openMP.noXTC  Makefile.xtc  README  accept_or_reject.f90  accumulate.f90  angle_dist_pick.f90  angle_dist_pick.mod  angle_distortion.f90  angle_distortion.o.REMOVED.git-id  atom_displacement.f90  atompair_nrg_table_routines.f90  atoms_to_place.f90  atoms_to_place.mod  atoms_to_place.o.REMOVED.git-id  backup_move_identity_switch.f90  cassandra.exe.REMOVED.git-id  cassandra_debu.exe.REMOVED.git-id  cassandra_gfortran.exe_orig  cassandra_gfortran.exe_orig.REMOVED.git-id  cassandra_intel_openMP.exe.REMOVED.git-id  chempot.f90  clean_abort.f90  compute_cell_dimensions.f90  create_intra_exclusion_table.f90  create_nonbond_table.f90  (+126 more)
releases/: Cassandra_V1.2.1.tar.gz.REMOVED.git-id
(+1521 files in other folders)
